@@ -111,7 +111,7 @@ AutoIncBuild=0
 MajorVer=1
 MinorVer=2
 Release=0
-Build=315
+Build=318
 Debug=0
 PreRelease=0
 Special=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=xxm Http Server (AutoUpdate)
-FileVersion=1.2.0.315
+FileVersion=1.2.0.318
 InternalName=
 LegalCopyright=
 LegalTrademarks=
